--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -538,6 +538,7 @@
   "systemTime.error.overlayTitle": "Unable to sync - incorrect time",
   "systemTime.error.supportPortalLink": "Support Portal",
   "systemTime.error.supportPortalLinkUrl": "https://daedaluswallet.io/clock-sync/",
+  "test.environment.daedalusCatalystLabel": "Cardano mainnet - Daedalus Catalyst",
   "test.environment.daedalusFlightLabel": "Cardano mainnet - Daedalus Flight",
   "test.environment.developmentLabel": "Development",
   "test.environment.itnRewardsV1Label": "Incentivized Testnet v1 - Rewards",
