--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -473,6 +473,7 @@
   "staking.stakePools.tooltip.experimentalTooltipLabel": "Experimental feature, data may be inaccurate.",
   "staking.stakePools.tooltip.pledge": "Pledge:",
   "staking.stakePools.tooltip.producedBlocks": "Produced blocks:",
+  "staking.stakePools.tooltip.expectedRewards": "Expected rewards:",
   "staking.stakePools.tooltip.profitMargin": "Pool margin:",
   "staking.stakePools.tooltip.ranking": "Rank:",
   "staking.stakePools.tooltip.relativeStake": "Controlled stake:",
