--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -473,6 +473,7 @@
   "staking.stakePools.tooltip.experimentalTooltipLabel": "実験的機能データは不正確な場合があります",
   "staking.stakePools.tooltip.pledge": "出資：",
   "staking.stakePools.tooltip.producedBlocks": "生成ブロック数：",
+  "staking.stakePools.tooltip.expectedRewards": "期待される報酬：",
   "staking.stakePools.tooltip.profitMargin": "プールマージン：",
   "staking.stakePools.tooltip.ranking": "ランク：",
   "staking.stakePools.tooltip.relativeStake": "管理下のステーク：",
