--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -468,7 +468,6 @@
   "staking.stakePools.search.searchInputPlaceholder": "Search stake pools",
   "staking.stakePools.tableHeader.cost": "Cost (ADA)",
   "staking.stakePools.tableHeader.margin": "Margin",
-  "staking.stakePools.tableHeader.name": "Name",
   "staking.stakePools.tableHeader.performance": "Performance",
   "staking.stakePools.tableHeader.pledge": "Pledge",
   "staking.stakePools.tableHeader.producedBlocks": "Produced Blocks",
@@ -476,6 +475,7 @@
   "staking.stakePools.tableHeader.retiring": "Retiring in",
   "staking.stakePools.tableHeader.roi": "Roi",
   "staking.stakePools.tableHeader.saturation": "Saturation",
+  "staking.stakePools.tableHeader.ticker": "Ticker",
   "staking.stakePools.tableHeader.uptime": "Uptime (days)",
   "staking.stakePools.tooltip.copyIdTooltipLabel": "Copy the stake pool ID",
   "staking.stakePools.tooltip.costPerEpoch": "Cost per epoch:",
