--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -6640,44 +6640,86 @@
     "descriptors": [
       {
         "defaultMessage": "!!!Register to vote",
-        "description": "Headline for .",
-        "end": {
-          "column": 3,
-          "line": 15
-        },
-        "file": "source/renderer/app/components/voting/info/VotingInfo.js",
-        "id": "voting.info.heading",
-        "start": {
-          "column": 11,
-          "line": 11
-        }
-      },
-      {
-        "defaultMessage": "!!!To start yo will need to have the <span>Catalyst Voting App</span> ready on your smart phone! To register to vote you will need a <span>PIN code</span> and a <span>QR code</span> that you will generate here within <span>Daedalus</span>. Before you start",
-        "description": "!!!Info description for .",
+        "description": "Headline for Voting Catalyst steps",
         "end": {
           "column": 3,
           "line": 21
         },
         "file": "source/renderer/app/components/voting/info/VotingInfo.js",
-        "id": "voting.info.description",
+        "id": "voting.info.heading",
         "start": {
-          "column": 15,
-          "line": 16
+          "column": 11,
+          "line": 17
         }
       },
       {
-        "defaultMessage": "Register to vote",
-        "description": "Button Label for .",
+        "defaultMessage": "!!!Before you start you must first complete the steps below:",
+        "description": "Info description for Voting Catalyst steps",
         "end": {
           "column": 3,
           "line": 26
         },
         "file": "source/renderer/app/components/voting/info/VotingInfo.js",
-        "id": "voting.info.buttonLabel",
+        "id": "voting.info.description",
         "start": {
           "column": 15,
           "line": 22
+        }
+      },
+      {
+        "defaultMessage": "!!!Download the Catalyst Voting App",
+        "description": "Info step title 2 for Voting Catalyst steps",
+        "end": {
+          "column": 3,
+          "line": 31
+        },
+        "file": "source/renderer/app/components/voting/info/VotingInfo.js",
+        "id": "voting.info.stepTitle1",
+        "start": {
+          "column": 14,
+          "line": 27
+        }
+      },
+      {
+        "defaultMessage": "!!!Open the Catalyst Voting App and click on the complete registration button.",
+        "description": "Info step title 2 for Voting Catalyst steps",
+        "end": {
+          "column": 3,
+          "line": 36
+        },
+        "file": "source/renderer/app/components/voting/info/VotingInfo.js",
+        "id": "voting.info.stepTitle2",
+        "start": {
+          "column": 14,
+          "line": 32
+        }
+      },
+      {
+        "defaultMessage": "!!!Make sure you have 5 minutes to complete the process",
+        "description": "Info step title 3 for Voting Catalyst steps",
+        "end": {
+          "column": 3,
+          "line": 41
+        },
+        "file": "source/renderer/app/components/voting/info/VotingInfo.js",
+        "id": "voting.info.stepTitle3",
+        "start": {
+          "column": 14,
+          "line": 37
+        }
+      },
+      {
+        "defaultMessage": "!!!I've completed all the steps. Continue with registration.",
+        "description": "Button Label for Voting Catalyst steps",
+        "end": {
+          "column": 3,
+          "line": 46
+        },
+        "file": "source/renderer/app/components/voting/info/VotingInfo.js",
+        "id": "voting.info.buttonLabel",
+        "start": {
+          "column": 15,
+          "line": 42
         }
       }
     ],
@@ -6789,7 +6831,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!By confirming this action, you are making a tx to yourself, and generating meta-data that validates your voting power.",
+        "defaultMessage": "!!!By confirming this action, you are making a tx to yourself, and generating meta-data that validates your voting power. Except Fees, there will be no change in your wallet's balance.",
         "description": "Description on the voting add \"deposit\" step.",
         "end": {
           "column": 3,
@@ -6803,7 +6845,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Deposit funds and generate QR code",
+        "defaultMessage": "!!!Validate my voting power by sending myself a transaction",
         "description": "Label for continue button on the voting add \"deposit\" step.",
         "end": {
           "column": 3,
@@ -6892,7 +6934,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Dont forget it! You will need it in order to access the voting app and be able to vote.",
+        "defaultMessage": "!!!<span>Don't forget your Pin Code.</span> If you lose it you will not be able to vote.",
         "description": "Reminder on the voting add \"enter pin code\" step.",
         "end": {
           "column": 3,
@@ -7071,7 +7113,7 @@
     "descriptors": [
       {
         "defaultMessage": "!!!Register to vote",
-        "description": "Headline for Voting add Stepper.",
+        "description": "Headline for Voting add Stepper",
         "end": {
           "column": 3,
           "line": 16
@@ -7085,13 +7127,13 @@
       },
       {
         "defaultMessage": "!!!Step {step} of {stepCount}",
-        "description": "Sub title for Voting add.",
+        "description": "Sub title for Voting add",
         "end": {
           "column": 3,
           "line": 21
         },
         "file": "source/renderer/app/components/voting/VotingAdd.js",
-        "id": "voting.votingAdd.subTitle",
+        "id": "voting.votingAdd.subtitle",
         "start": {
           "column": 12,
           "line": 17
@@ -14468,183 +14510,5 @@
       }
     ],
     "path": "source/renderer/app/utils/paperWalletPdfGenerator.json"
-  },
-  {
-    "descriptors": [
-      {
-        "defaultMessage": "!!!Create",
-        "description": "Create label.",
-        "end": {
-          "column": 3,
-          "line": 36
-        },
-        "file": "storybook/stories/common/Widgets.stories.js",
-        "id": "global.labels.create",
-        "start": {
-          "column": 10,
-          "line": 32
-        }
-      },
-      {
-        "defaultMessage": "!!!Create a new wallet",
-        "description": "Create a new wallet description.",
-        "end": {
-          "column": 3,
-          "line": 41
-        },
-        "file": "storybook/stories/common/Widgets.stories.js",
-        "id": "wallet.add.dialog.create.description",
-        "start": {
-          "column": 19,
-          "line": 37
-        }
-      },
-      {
-        "defaultMessage": "!!!Join",
-        "description": "Join label.",
-        "end": {
-          "column": 3,
-          "line": 46
-        },
-        "file": "storybook/stories/common/Widgets.stories.js",
-        "id": "wallet.add.dialog.join.label",
-        "start": {
-          "column": 8,
-          "line": 42
-        }
-      },
-      {
-        "defaultMessage": "!!!Join a shared wallet",
-        "description": "Join a shared wallet description.",
-        "end": {
-          "column": 3,
-          "line": 51
-        },
-        "file": "storybook/stories/common/Widgets.stories.js",
-        "id": "wallet.add.dialog.join.description",
-        "start": {
-          "column": 20,
-          "line": 47
-        }
-      },
-      {
-        "defaultMessage": "!!!Import",
-        "description": "Import label.",
-        "end": {
-          "column": 3,
-          "line": 56
-        },
-        "file": "storybook/stories/common/Widgets.stories.js",
-        "id": "wallet.add.dialog.import.label",
-        "start": {
-          "column": 10,
-          "line": 52
-        }
-      },
-      {
-        "defaultMessage": "!!!Import wallets from an earlier version of Daedalus or the Daedalus state directory",
-        "description": "Import wallets from an earlier version of Daedalus or the Daedalus state directory description.",
-        "end": {
-          "column": 3,
-          "line": 63
-        },
-        "file": "storybook/stories/common/Widgets.stories.js",
-        "id": "wallet.add.dialog.import.description",
-        "start": {
-          "column": 24,
-          "line": 57
-        }
-      },
-      {
-        "defaultMessage": "!!!Recovery Phrase",
-        "description": "Recovery Phrase description.",
-        "end": {
-          "column": 3,
-          "line": 68
-        },
-        "file": "storybook/stories/common/Widgets.stories.js",
-        "id": "wallet.restore.dialog.mnemonicsStep",
-        "start": {
-          "column": 18,
-          "line": 64
-        }
-      },
-      {
-        "defaultMessage": "!!!Save",
-        "description": "Save description.",
-        "end": {
-          "column": 3,
-          "line": 73
-        },
-        "file": "storybook/stories/common/Widgets.stories.js",
-        "id": "global.labels.save",
-        "start": {
-          "column": 8,
-          "line": 69
-        }
-      },
-      {
-        "defaultMessage": "!!!Follow instructions and manually update",
-        "description": "Follow instructions and manually update description.",
-        "end": {
-          "column": 3,
-          "line": 78
-        },
-        "file": "storybook/stories/common/Widgets.stories.js",
-        "id": "manualUpdate.button.label",
-        "start": {
-          "column": 22,
-          "line": 74
-        }
-      }
-    ],
-    "path": "storybook/stories/common/Widgets.stories.json"
-  },
-  {
-    "descriptors": [
-      {
-        "defaultMessage": "!!!Read More",
-        "description": "Read More button label.",
-        "end": {
-          "column": 3,
-          "line": 37
-        },
-        "file": "storybook/stories/news/AlertsOverlay.stories.js",
-        "id": "global.labels.readMore",
-        "start": {
-          "column": 12,
-          "line": 33
-        }
-      },
-      {
-        "defaultMessage": "!!!Failure Alert",
-        "description": "Failure Alert title.",
-        "end": {
-          "column": 3,
-          "line": 42
-        },
-        "file": "storybook/stories/news/AlertsOverlay.stories.js",
-        "id": "global.errors.failureAlert",
-        "start": {
-          "column": 16,
-          "line": 38
-        }
-      },
-      {
-        "defaultMessage": "!!!Content",
-        "description": "Content.",
-        "end": {
-          "column": 3,
-          "line": 47
-        },
-        "file": "storybook/stories/news/AlertsOverlay.stories.js",
-        "id": "static.dummy.markdown",
-        "start": {
-          "column": 11,
-          "line": 43
-        }
-      }
-    ],
-    "path": "storybook/stories/news/AlertsOverlay.stories.json"
   }
 ]
