--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -124,7 +124,6 @@
   "global.duration.months": "months",
   "global.duration.seconds": "seconds",
   "global.duration.years": "years",
-  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "This field is required.",
   "global.errors.incompleteMnemonic": "Please enter all {expected} words.",
   "global.errors.invalidEmail": "Invalid email entered, please check.",
@@ -142,7 +141,6 @@
   "global.labels.close": "Close",
   "global.labels.create": "Create",
   "global.labels.filter": "Filter",
-  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "Remove",
   "global.labels.reset": "Reset",
   "global.labels.save": "Save",
@@ -185,7 +183,6 @@
   "loading.screen.updatedCardanoMessage": "Cardano node updated",
   "loading.screen.updatingCardanoMessage": "Updating Cardano node",
   "loading.screen.verifyingBlockchainMessage": "Verifying the blockchain ({verificationProgress}% complete) ",
-  "manualUpdate.button.label": "Follow instructions and manually update",
   "news.newsfeed.empty": "Newsfeed is empty",
   "news.newsfeed.noFetch": "Trying to fetch the newsfeed...",
   "news.newsfeed.title": "Newsfeed",
@@ -487,7 +484,6 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
-  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "I understand",
   "static.splash.network.flightDescription1": "Thank you for downloading the Daedalus Flight wallet! This version of Daedalus is specially created so users can test new features and we can squash usability bugs before pushing releases to the mainnet production version of the Daedalus wallet. ",
   "static.splash.network.flightDescription2": "Although Flight candidates are designed to test functionality, this is on the mainnet and will <b>be using mainnet ada. Transactions made using Flight candidates will be real ada payments.</b> If you are not a power user, we recommend you stick to using our stable, fully-tested production Daedalus wallet client. It is very important to note that transactions performed in Daedalus Flight are real and your funds will be transferred because the Cardano blockchain will be validating all transactions on mainnet.",
@@ -551,12 +547,15 @@
   "test.environment.shelleyTestnetLabel": "Shelley Testnet",
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
-  "voting.info.buttonLabel": "Register to vote",
-  "voting.info.description": "To start yo will need to have the <span>Catalyst Voting App</span> ready on your smart phone! To register to vote you will need a <span>PIN code</span> and a <span>QR code</span> that you will generate here within <span>Daedalus</span>. Before you start",
+  "voting.info.buttonLabel": "I've completed all the steps. Continue with registration.",
+  "voting.info.description": "Before you start you must first complete the steps below:",
   "voting.info.heading": "Register to vote",
+  "voting.info.stepTitle1": "Download the Catalyst Voting App",
+  "voting.info.stepTitle2": "Open the Catalyst Voting App and click on the complete registration button.",
+  "voting.info.stepTitle3": "Make sure you have 5 minutes to complete the process",
   "voting.votingAdd.Deposit.step.calculatingFees": "Calculating fees",
-  "voting.votingAdd.Deposit.step.continueButtonLabel": "Deposit funds and generate QR code",
-  "voting.votingAdd.Deposit.step.description": "By confirming this action, you are making a tx to yourself, and generating meta-data that validates your voting power.",
+  "voting.votingAdd.Deposit.step.continueButtonLabel": "Validate my voting power by sending myself a transaction",
+  "voting.votingAdd.Deposit.step.description": "By confirming this action, you are making a tx to yourself, and generating meta-data that validates your voting power. Except Fees, there will be no change in your wallet's balance.",
   "voting.votingAdd.Deposit.step.feesLabel": "Fees",
   "voting.votingAdd.Deposit.step.spendingPasswordLabel": "Spending password",
   "voting.votingAdd.Deposit.step.spendingPasswordPlaceholder": "Spending password",
@@ -565,7 +564,7 @@
   "voting.votingAdd.EnterPinCode.step.enterPinCodeLabel": "Enter PIN code",
   "voting.votingAdd.EnterPinCode.step.errors.invalidPinCode": "Invalid pin code",
   "voting.votingAdd.EnterPinCode.step.errors.invalidRepeatPinCode": "Pin doesn't match",
-  "voting.votingAdd.EnterPinCode.step.reminder": "Dont forget it! You will need it in order to access the voting app and be able to vote.",
+  "voting.votingAdd.EnterPinCode.step.reminder": "<span>Don't forget your Pin Code.</span> If you lose it you will not be able to vote.",
   "voting.votingAdd.EnterPinCode.step.repeatPinCodeLabel": "Repeat PIN code",
   "voting.votingAdd.QrCode.step.continueButtonLabel": "Close",
   "voting.votingAdd.QrCode.step.description": "Waiting for transaction to be confirmed...",
@@ -585,7 +584,7 @@
   "voting.votingAdd.steps.step.2.label": "PIN code",
   "voting.votingAdd.steps.step.3.label": "Deposit",
   "voting.votingAdd.steps.step.4.label": "QR code",
-  "voting.votingAdd.subTitle": "Step {step} of {stepCount}",
+  "voting.votingAdd.subtitle": "Step {step} of {stepCount}",
   "wallet.add.dialog.create.description": "Create a new wallet",
   "wallet.add.dialog.create.description.itn": "Create a new wallet",
   "wallet.add.dialog.create.label": "Create",
