--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -124,7 +124,6 @@
   "global.duration.months": "月",
   "global.duration.seconds": "秒",
   "global.duration.years": "年",
-  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "必須フィールドです",
   "global.errors.incompleteMnemonic": "{expected}語を入力して下さい。",
   "global.errors.invalidEmail": "入力されたメールアドレスは無効です。確認してください。",
@@ -142,7 +141,6 @@
   "global.labels.close": "閉じる",
   "global.labels.create": "作成",
   "global.labels.filter": "フィルター",
-  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "削除",
   "global.labels.reset": "リセット",
   "global.labels.save": "保存する",
@@ -185,7 +183,6 @@
   "loading.screen.updatedCardanoMessage": "Cardanoノードが更新されました",
   "loading.screen.updatingCardanoMessage": "Cardanoノードを更新しています",
   "loading.screen.verifyingBlockchainMessage": "ブロックチェーンを検証しています（{verificationProgress}%完了）",
-  "manualUpdate.button.label": "指示に従い手動で更新してください",
   "news.newsfeed.empty": "ニュースフィードは空です",
   "news.newsfeed.noFetch": "ニュースフィードを読み込んでいます…",
   "news.newsfeed.title": "ニュースフィード",
@@ -487,7 +484,6 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
-  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "了解しました",
   "static.splash.network.flightDescription1": "Daedalus Flightウォレットをダウンロードいただきありがとうございます。このDaedalusバージョンは、Daedalusウォレットの製品バージョンをメインネットへリリースする前に、ユーザーが新機能をテストし、開発チームが使用性に関するバグに対処するために特別に作成したバージョンです。",
   "static.splash.network.flightDescription2": "Flight候補版は機能性をテストするためにデザインされていますが、これはメインネットに接続されており、<b>メインネットのADAを使用します。Flight候補版を使用して実行されるトランザクションでは実際のADAによる支払いが生じます。</b>パワーユーザー以外は、完全にテスト済みの安定した製品版Daedalusウォレットの使用を継続することを推奨します。Daedalus Flightウォレットで実行されるトランザクションは実際のものであり、すべてのトランザクションはCardanoブロックチェーンにメインネット上で検証されるため、ユーザーの資金は実際に送金されるということを十分に理解してください。",
@@ -551,12 +547,15 @@
   "test.environment.shelleyTestnetLabel": "Shelleyテストネット",
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
-  "voting.info.buttonLabel": "Register to vote",
-  "voting.info.description": "!!!To start yo will need to have the <span>Catalyst Voting App</span> ready on your smart phone! To register to vote you will need a <span>PIN code</span> and a <span>QR code</span> that you will generate here within <span>Daedalus</span>. Before you start",
+  "voting.info.buttonLabel": "!!!I've completed all the steps. Continue with registration.",
+  "voting.info.description": "!!Before you start you must first complete the steps below:",
   "voting.info.heading": "!!!Register to vote",
+  "voting.info.stepTitle1": "!!!Download the Catalyst Voting App",
+  "voting.info.stepTitle2": "!!!Open the Catalyst Voting App and click on the complete registration button.",
+  "voting.info.stepTitle3": "!!!Make sure you have 5 minutes to complete the process",
   "voting.votingAdd.Deposit.step.calculatingFees": "!!!Calculating fees",
-  "voting.votingAdd.Deposit.step.continueButtonLabel": "!!!Deposit funds and generate QR code",
-  "voting.votingAdd.Deposit.step.description": "!!!By confirming this action, you are making a tx to yourself, and generating meta-data that validates your voting power.",
+  "voting.votingAdd.Deposit.step.continueButtonLabel": "!!!Validate my voting power by sending myself a transaction",
+  "voting.votingAdd.Deposit.step.description": "!!!By confirming this action, you are making a tx to yourself, and generating meta-data that validates your voting power. Except Fees, there will be no change in your wallet's balance.",
   "voting.votingAdd.Deposit.step.feesLabel": "!!!Fees",
   "voting.votingAdd.Deposit.step.spendingPasswordLabel": "!!!Spending password",
   "voting.votingAdd.Deposit.step.spendingPasswordPlaceholder": "!!!Spending password",
@@ -565,7 +564,7 @@
   "voting.votingAdd.EnterPinCode.step.enterPinCodeLabel": "!!!Enter PIN code",
   "voting.votingAdd.EnterPinCode.step.errors.invalidPinCode": "!!!Invalid pin code",
   "voting.votingAdd.EnterPinCode.step.errors.invalidRepeatPinCode": "!!!Pin doesn't match",
-  "voting.votingAdd.EnterPinCode.step.reminder": "!!!Dont forget it! You will need it in order to access the voting app and be able to vote.",
+  "voting.votingAdd.EnterPinCode.step.reminder": "!!!<span>Don't forget your Pin Code.</span> If you lose it you will not be able to vote.",
   "voting.votingAdd.EnterPinCode.step.repeatPinCodeLabel": "!!!Repeat PIN code",
   "voting.votingAdd.QrCode.step.continueButtonLabel": "!!!Close",
   "voting.votingAdd.QrCode.step.description": "!!!Waiting for transaction to be confirmed...",
@@ -585,7 +584,7 @@
   "voting.votingAdd.steps.step.2.label": "PIN code",
   "voting.votingAdd.steps.step.3.label": "Deposit",
   "voting.votingAdd.steps.step.4.label": "QR code",
-  "voting.votingAdd.subTitle": "!!!Step {step} of {stepCount}",
+  "voting.votingAdd.subtitle": "!!!Step {step} of {stepCount}",
   "wallet.add.dialog.create.description": "ウォレットを新規作成する",
   "wallet.add.dialog.create.description.itn": "Shelleyウォレットを新規作成する",
   "wallet.add.dialog.create.label": "作成",
