--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -185,7 +185,6 @@
   "loading.screen.updatedCardanoMessage": "Cardanoノードが更新されました",
   "loading.screen.updatingCardanoMessage": "Cardanoノードを更新しています",
   "loading.screen.verifyingBlockchainMessage": "ブロックチェーンを検証しています（{verificationProgress}%完了）",
-  "manualUpdate.button.label": "指示に従い手動で更新してください",
   "news.newsfeed.empty": "ニュースフィードは空です",
   "news.newsfeed.noFetch": "ニュースフィードを読み込んでいます…",
   "news.newsfeed.title": "ニュースフィード",
@@ -346,6 +345,7 @@
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputLabel": "ウォレット",
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputPlaceholder": "ウォレットを選択してください",
   "staking.delegationSetup.chooseWallet.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
+  "staking.delegationSetup.chooseWallet.step.dialog.syncingWallet": "同期",
   "staking.delegationSetup.chooseWallet.step.dialog.title": "ウォレットを委任する",
   "staking.delegationSetup.confirmation.step.dialog.calculatingFees": "手数料を計算しています",
   "staking.delegationSetup.confirmation.step.dialog.cancelButtonLabel": "キャンセル",
